# code-snippets

./: .gitignore  README.md
array/: README.md
array-inplace-move-zeros/: main.c
array-inplace-partition/: main3.c
array-merge-sorted-arrays/: main.c
array/array-inplace-move-zeros/: main.c
array/array-inplace-partition/: array_partition_in_three.c  array_partition_in_two.c
array/array-inplace-remove/: main1.c  main2.c  main3.c
array/array-inplace-reverse/: main1.c
backups/heapq.js/: README.md  (+5 more)
binary-indexed-tree/: README.md  bit-max.hpp  bit-sum.hpp  main-max-interval.cc  main-max.cc  main-sum.cc
binary-search/: README.md  binary_search.c  bs01.cc  bs217.cc  classic_bs.cc  descending_order_bs.cc  main-binary-search-variations.c  main.c  ternary_search_peak.c
binary-tree/binary-tree-cpp/: CMakeLists.txt  README.md  binarytree.cpp  binarytree.hpp  binarytree_test.cpp  conanfile.txt
data-structure-binary-tree/: Makefile  main.c  queue.h  tree.c  tree.h  util.c  util.h
data-structure-binary-tree-python/: main.py  tree.py
data-structure-hashtable/: main.c
data-structure-heap/: main.c
data-structure-list/: main.c
data-structure-queue/: max-queue.c  max-queue.py
data-structure-skiplist/: main.c
data-structure-stack/: main-min-stack.c  min-stack.py
data-structure-trie/: main1.c  main2.c
dp/: README.md
experiments/segbitset/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  segbitset.h  segbitset_benchmark.cc  segbitset_test.cc
graph/shortest-path-visulization-sdl/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cc
hashtable/: README.md  hashtable.c  hashtable.h  main.c
heap/: Makefile  README.md  heap.c  heap.h  main.c
inplace-array-remove/: main1.c  main2.c  main3.c
inplace-partition/: main1.c  main2.c  main3.c  main4.c  main5.c
inplace-reverse/: main2.c
largest-sum-contiguous-subarray/: main-dp.c
list/: README.md  main.c
longest-common-subsequence/: main.c
longest-common-substring/: main.c
longest-palindromic-subsequence/: main2.c
longest-palindromic-substring/: main2.c  main3.c  main5.c
math/: README.md
math-add-minus-mul-div-etc/: main.c
math-number-theory/: main.c
matrix-search/: main.c
matrix-sorted-search/: main.c
min-edit-distance/: main.c  main1.c
permutation/: main2.c
pour-problem/: main.py  main_bfs.py  main_dfs.py
problems/: README.md
problems/matrix-sorted-search/benchmark/: CMakeLists.txt  README.md  test.cc
queue/: README.md
random/: README.md
regular-expression/: README.md
repeated-string-pattern/: main.c  main1.c
segment-tree/: README.md  segment-tree-pre-order.cc  segment-tree.cc
shortest-path/: README.md
skiplist/: README.md  main.c  skiplist.c  skiplist.h
sort/: README.md
sort-heap-sort/: main.c
sort-merge-sort/: main.c  main1.c
sort-quick-sort/: main.c
sort-quicksort/: main.c  main1.c
stack/: README.md  main-dynamic-mem-stack.c
statemachine/: README.md
string/: README.md
string-search-boyer-moore/: main.c
string-search-kmp/: main.c  main1.c
ternary-search-peak/: main.c
top-k/: main1.c  main2.c
trie/: README.md  main1.c  main3.cpp
union-find/: README.md
(+528 files in other folders)
